2002-09-18  Harlan Stenn  <harlan@pfcs.com>

	* Makefile.am (modulecmd_CFLAGS): Use X_CFLAGS and TCL_INCLUDES.

	* lib/tests/Makefile.am (EXTRA_PROGRAMS): Renamed from
	noinst_PROGRAMS.  Lose the .x suffixes.

	* lib/Makefile.am (ACLOCAL_AMFLAGS): Look in ../config/ .

2002-09-16  R.K. Owen	<rk@owen.sj.ca.us>
	* colcomp.c: removed
	* utility.c: added colcomp.c contents
	* Makefile.am: removed colcomp.c
	* main.c: Added DEF_COLLATE_BY_NUMBER output for --version
	* configure.ac: changed USE_COLCOMP to DEF_COLLATE_BY_NUMBER,
	  and added memdebug
	* locate_module.c: changed USE_COLCOMP and GetModuleName for deep dirs.
	* modules_def.h: check for HAVE_CONFIG_H, and added memdebug
	* ModuleCmd_List.c: Simplified using uvec objects

2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
	* config/.cvsignore: New File: Ignore autogenerated files.
	* init/.cvsignore: Ignore autogenerated files.

2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
	* .cvsignore: Ignore autogenerated files.
	* doc/.cvsignore: Ignore autogenerated files.
	* etc/.cvsignore: Ignore autogenerated files.
	* ext/.cvsignore: Ignore autogenerated files.
	* lib/.cvsignore: Ignore autogenerated files.
	* lib/tests/.cvsignore: Ignore autogenerated files.
	* modulefiles/.cvsignore: Ignore autogenerated files.
	* lib/tests/Makefile.am: Tweeked for autoreconf

2002-09-12  R.K. Owen	<rk@owen.sj.ca.us>
	* README: Updated the anonymous CVS invocation.
	* lib/aclocal.m4: Deleted auto* generated file.
	* lib/configure.ac: Tweeked to autoreconf
	* lib/Makefile.am: Tweeked to autoreconf
	* lib/uvec.h: Added uvec_strfree
	* lib/uvec/uvec_copy_str.c: Uses uvec string fns
	* lib/uvec/uvec_copy_vec.c: Uses uvec string fns
	* lib/uvec/uvec_strfree.c: New file: to dealloc uvec2str()
	generated strings
	* lib/tests/tuvec.c: Updated for uvec changes

2002-09-12  Harlan Stenn  <harlan@pfcs.com>

	* doc/Makefile.am: Added file.

	* lib/configure: Remove auto*-generated file.
	* lib/config.h.in: Ditto.
