@@ -1,3 +1,12 @@
+2003-07-09  Harlan Stenn  <harlan@pfcs.com>
+
+	* tcl/modulecmd.tcl: If g_force is set, ignore *_modshare.
+
+	When we produce a shell function, preface the definition with
+	"function" in case it's already defined.
+
+	Default g_force to 1 now.
+
 2002-09-18  Harlan Stenn  <harlan@pfcs.com>
 
 	* Makefile.am (modulecmd_CFLAGS): Use X_CFLAGS and TCL_INCLUDES.
